Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@syncobj_timeline@signal-point-0 - fail - Failed assertion: pci_slot_name, Last errno: 22, Invalid argument
(syncobj_timeline:1951) igt_device_scan-CRITICAL: Test assertion failure function set_pci_slot_name, file ../lib/igt_device_scan.c:582:
(syncobj_timeline:1951) igt_device_scan-CRITICAL: Failed assertion: pci_slot_name
(syncobj_timeline:1951) igt_device_scan-CRITICAL: Last errno: 22, Invalid argument
(syncobj_timeline:1951) igt_device_scan-CRITICAL: PCI_SLOT_NAME property == NULL
Test syncobj_timeline failed.