lib/igt_device_scan: Rescan pci properties if PCI_SLOT_NAME wasn't found

References: https://gitlab.freedesktop.org/drm/intel/-/issues/6543

Due to lack of reproduction path of the above issue more data about
missing PCI_SLOT_NAME property is required.

What is extremely weird when PCI_SLOT_NAME is missing udev returns some
properties, like:

[properties]
DEVPATH                         : /devices/pci0000:00/0000:00:02.0
DRIVER                          : i915
PCI_CLASS                       : 30000
PCI_ID                          : 8086:191E
SUBSYSTEM                       : pci

To narrow the problematic code when PCI_SLOT_NAME is missing lets dump
kernel uevent file and retry scanning properties from udev. Retry path
allows to detect if udev returns same list of properties.

Above doesn't fix the issue. It is providing additional information about
devices and their properties provided from udev, especially when missing
PCI_SLOT_NAME will strike again. It also contains warning which might
detect situation where two scanning of properties will provide different
results.

Signed-off-by: Zbigniew Kempczyński <zbigniew.kempczynski@intel.com>
Cc: Petri Latvala <petri.latvala@intel.com>
Reviewed-by: Petri Latvala <petri.latvala@intel.com>